--- a/src/acessos/acessos.css
+++ b/src/acessos/acessos.css
@@ -109,8 +109,8 @@ li button:hover {
 
 .tx {
   text-align: center;
-  width: 100px;
-  height:200px;
+  width: 10%;
+  height: 50px;
   margin-right: 20%;
   color: #0d0664;
   font-weight: 700;
